--- a/resume/style.css
+++ b/resume/style.css
@@ -2,6 +2,10 @@ body {
     background-color: rgb(46, 39, 39);
 }
 
+ul {
+    list-style: none;
+}
+
 .resume {
     background-color: white;
     width: 800px;
@@ -19,7 +23,6 @@ body {
 
 .personal ul {
     margin-top: 0;
-    list-style: none;
     display: flex;
     justify-content: center;
     gap: 40px;
