--- a/resume/style.css
+++ b/resume/style.css
@@ -15,6 +15,16 @@ ul {
     box-sizing: border-box;
 }
 
+section {
+    display: flex;
+    margin: 0px 10px;
+    /* gap: 50px; */
+}
+
+section h3 {
+    width: 150px;
+}
+
 
 /* ********************************************************************* */
 .personal {
@@ -38,3 +48,9 @@ ul {
 }
 
 /* ********************************************************************* */
+
+
+.profiles ul {
+    display: flex;
+    gap: 200px;
+}
